feat: rust implementation' Add version management and utility functions
- Implemented `VersionManager` for managing Java versions, including setting current versions, aliases, and reading/writing local version files.
- Added utility functions for printing messages and formatting sizes in `utils.rs`.
- Created comprehensive integration tests for auto-switching functionality based on `.java-version` files.
- Developed shell integration tests to verify correct behavior of the JCVM shell wrapper.
- Removed outdated test script `test.sh` and replaced it with more structured test scripts for better maintainability.

--- a/.gitignore
+++ b/.gitignore
@@ -1,9 +1,33 @@
+# macOS
 .DS_Store
+
+# Editor temporary files
 *.swp
 *.swo
 *~
+
+# IDE
 .idea/
 .vscode/
+
+# JCVM directories
 cache/
 versions/
 alias/
+
+# Rust specific
+/target
+Cargo.lock
+**/*.rs.bk
+*.pdb
+
+# Test artifacts
+*.profraw
+*.profdata
+
+# Documentation build
+/book
+
+# Release artifacts
+/dist
+/releases
