--- a/Cargo.toml
+++ b/Cargo.toml
@@ -16,6 +16,7 @@ colored = "2.1"
 
 # Async runtime
 tokio = { version = "1.39", features = ["full"] }
+async-trait = "0.1"
 
 # HTTP client
 reqwest = { version = "0.12", features = ["json", "stream"] }
