feat: add release guide documentation
feat: create roadmap for upcoming features and improvements

docs: add testing guide for running and organizing tests

docs: introduce version management guide with automated and manual version bumping

feat: implement binary installation script for easy setup

fix: update install script with correct repository URL

docs: add README for scripts directory with usage instructions

feat: create version bump script for managing version updates and changelog entries

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -5,7 +5,7 @@ edition = "2021"
 authors = ["JCVM Contributors"]
 description = "Java Configuration & Version Manager - A fast, secure JDK version manager"
 license = "MIT"
-repository = "https://github.com/yourusername/jcvm"
+repository = "https://github.com/Yezta/cvm"
 keywords = ["java", "jdk", "version-manager", "development-tools"]
 categories = ["command-line-utilities", "development-tools"]
 
