Remove old integration test scripts and add comprehensive installation and testing scripts for JCVM
- Deleted `test-python-integration.sh` and `test-shell-integration.sh` as they were outdated.
- Introduced `install-binary.sh` for binary installation with platform detection and version management.
- Added `install.sh` for quick installation via Git, including Rust setup if not present.
- Created `test-auto-switch-integration.sh` for testing .java-version auto-switch functionality.
- Implemented `test-java-version-auto-switch.sh` to validate version switching based on .java-version files.
- Reintroduced `test-python-integration.sh` and `test-shell-integration.sh` with updated content for testing integration.

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -110,9 +110,9 @@ jobs:
         run: |
           export PATH="$PWD/target/release:$PATH"
           
-          if [ -f test-python-integration.sh ]; then
-            chmod +x test-python-integration.sh
-            ./test-python-integration.sh || true
+          if [ -f scripts/test-python-integration.sh ]; then
+            chmod +x scripts/test-python-integration.sh
+            ./scripts/test-python-integration.sh || true
           fi
 
   security-audit:
