--- a/.github/workflows/manual-version-bump.yml
+++ b/.github/workflows/manual-version-bump.yml
@@ -12,11 +12,11 @@ on:
           - minor
           - patch
         default: 'patch'
-      skip_tag:
-        description: 'Skip creating a git tag'
+      create_tag:
+        description: 'Create git tag after bump'
         required: false
         type: boolean
-        default: false
+        default: true
 
 permissions:
   contents: write
@@ -25,6 +25,9 @@ jobs:
   manual-bump:
     name: Manual Version Bump (${{ inputs.bump_type }})
     runs-on: ubuntu-latest
+    outputs:
+      version: ${{ steps.bump_version.outputs.new_version }}
+    
     steps:
       - name: Checkout code
         uses: actions/checkout@v4
@@ -74,126 +77,188 @@ jobs:
           esac
           
           echo "new_version=${NEW_VERSION}" >> $GITHUB_OUTPUT
+          echo "bump_type=${BUMP_TYPE}" >> $GITHUB_OUTPUT
           echo "Bumped ${BUMP_TYPE} version from ${CURRENT_VERSION} to ${NEW_VERSION}"
 
       - name: Update VERSION file
         run: |
           echo "${{ steps.bump_version.outputs.new_version }}" > VERSION
-          echo "Updated VERSION file to ${{ steps.bump_version.outputs.new_version }}"
+
+      - name: Install Rust toolchain
+        uses: dtolnay/rust-toolchain@stable
 
       - name: Update Cargo.toml version
         run: |
-          sed -i "s/^version = \".*\"/version = \"${{ steps.bump_version.outputs.new_version }}\"/" Cargo.toml
-          echo "Updated Cargo.toml to version ${{ steps.bump_version.outputs.new_version }}"
+          sed -i 's/^version = ".*"/version = "${{ steps.bump_version.outputs.new_version }}"/' Cargo.toml
 
       - name: Update Cargo.lock
         run: |
-          cargo update -p jcvm --precise ${{ steps.bump_version.outputs.new_version }} || cargo update -p jcvm || true
+          cargo update -p jcvm --precise ${{ steps.bump_version.outputs.new_version }} || cargo update -p jcvm
 
-      - name: Get commit messages since last version
-        id: commits
-        run: |
-          # Get the last version tag
-          LAST_TAG=$(git describe --tags --abbrev=0 2>/dev/null || echo "")
-          
-          if [ -z "$LAST_TAG" ]; then
-            # If no tags, get all commits
-            COMMITS=$(git log --pretty=format:"- %s (%h)" --no-merges)
-          else
-            # Get commits since last tag
-            COMMITS=$(git log ${LAST_TAG}..HEAD --pretty=format:"- %s (%h)" --no-merges)
-          fi
-          
-          # Save to file to handle multiline
-          echo "$COMMITS" > /tmp/commits.txt
-
-      - name: Update CHANGELOG.md
+      - name: Generate changelog
+        id: changelog
         run: |
           NEW_VERSION="${{ steps.bump_version.outputs.new_version }}"
-          BUMP_TYPE="${{ inputs.bump_type }}"
+          BUMP_TYPE="${{ steps.bump_version.outputs.bump_type }}"
           DATE=$(date +%Y-%m-%d)
+          LAST_TAG=$(git describe --tags --abbrev=0 2>/dev/null || echo "")
           
-          # Determine changelog section based on bump type
+          # Get commits categorized
+          if [ -z "$LAST_TAG" ]; then
+            RANGE="HEAD"
+          else
+            RANGE="${LAST_TAG}..HEAD"
+          fi
+          
+          # Categorize commits
+          FEATURES=$(git log $RANGE --pretty=format:"- %s (%h)" --no-merges | grep -i "^- feat" || echo "")
+          FIXES=$(git log $RANGE --pretty=format:"- %s (%h)" --no-merges | grep -i "^- fix" || echo "")
+          BREAKING=$(git log $RANGE --pretty=format:"- %s (%h)" --no-merges | grep -iE "^- [a-z]+(\([a-z]+\))?!:|^- BREAKING CHANGE:" || echo "")
+          DOCS=$(git log $RANGE --pretty=format:"- %s (%h)" --no-merges | grep -i "^- docs" || echo "")
+          CHORES=$(git log $RANGE --pretty=format:"- %s (%h)" --no-merges | grep -i "^- chore" || echo "")
+          OTHER=$(git log $RANGE --pretty=format:"- %s (%h)" --no-merges | grep -viE "^- (feat|fix|docs|chore|BREAKING)" || echo "")
+          
+          # Create changelog entry
+          cat > /tmp/changelog_entry.md << EOF
+          
+          ## [${NEW_VERSION}] - ${DATE}
+          EOF
+          
+          # Add section based on bump type
           case "$BUMP_TYPE" in
             major)
-              SECTION="### Breaking Changes"
+              if [ -n "$BREAKING" ]; then
+                echo "" >> /tmp/changelog_entry.md
+                echo "### ⚠️ BREAKING CHANGES" >> /tmp/changelog_entry.md
+                echo "" >> /tmp/changelog_entry.md
+                echo "$BREAKING" >> /tmp/changelog_entry.md
+              fi
               ;;
             minor)
-              SECTION="### Added"
+              if [ -n "$FEATURES" ]; then
+                echo "" >> /tmp/changelog_entry.md
+                echo "### ✨ Features" >> /tmp/changelog_entry.md
+                echo "" >> /tmp/changelog_entry.md
+                echo "$FEATURES" >> /tmp/changelog_entry.md
+              fi
               ;;
             patch)
-              SECTION="### Fixed"
+              if [ -n "$FIXES" ]; then
+                echo "" >> /tmp/changelog_entry.md
+                echo "### 🐛 Bug Fixes" >> /tmp/changelog_entry.md
+                echo "" >> /tmp/changelog_entry.md
+                echo "$FIXES" >> /tmp/changelog_entry.md
+              fi
               ;;
           esac
           
-          # Create temporary file with new entry
-          cat > /tmp/new_entry.md << EOF
+          # Add other categories if present
+          if [ -n "$FEATURES" ] && [ "$BUMP_TYPE" != "minor" ]; then
+            echo "" >> /tmp/changelog_entry.md
+            echo "### ✨ Features" >> /tmp/changelog_entry.md
+            echo "" >> /tmp/changelog_entry.md
+            echo "$FEATURES" >> /tmp/changelog_entry.md
+          fi
           
-          ## [${NEW_VERSION}] - ${DATE}
+          if [ -n "$FIXES" ] && [ "$BUMP_TYPE" != "patch" ]; then
+            echo "" >> /tmp/changelog_entry.md
+            echo "### 🐛 Bug Fixes" >> /tmp/changelog_entry.md
+            echo "" >> /tmp/changelog_entry.md
+            echo "$FIXES" >> /tmp/changelog_entry.md
+          fi
           
-          ${SECTION}
+          if [ -n "$DOCS" ]; then
+            echo "" >> /tmp/changelog_entry.md
+            echo "### 📚 Documentation" >> /tmp/changelog_entry.md
+            echo "" >> /tmp/changelog_entry.md
+            echo "$DOCS" >> /tmp/changelog_entry.md
+          fi
           
-          EOF
+          if [ -n "$CHORES" ]; then
+            echo "" >> /tmp/changelog_entry.md
+            echo "### 🔧 Chores" >> /tmp/changelog_entry.md
+            echo "" >> /tmp/changelog_entry.md
+            echo "$CHORES" >> /tmp/changelog_entry.md
+          fi
           
-          # Add commit messages
-          cat /tmp/commits.txt >> /tmp/new_entry.md
+          if [ -n "$OTHER" ]; then
+            echo "" >> /tmp/changelog_entry.md
+            echo "### 🔄 Changes" >> /tmp/changelog_entry.md
+            echo "" >> /tmp/changelog_entry.md
+            echo "$OTHER" >> /tmp/changelog_entry.md
+          fi
           
-          # Insert after the "## [Unreleased]" section or at the beginning
+          # Insert into CHANGELOG.md
           if grep -q "## \[Unreleased\]" CHANGELOG.md; then
-            # Find line number of [Unreleased] section
             LINE_NUM=$(grep -n "## \[Unreleased\]" CHANGELOG.md | head -1 | cut -d: -f1)
-            # Find next ## heading after Unreleased
             NEXT_SECTION=$(tail -n +$((LINE_NUM + 1)) CHANGELOG.md | grep -n "^## \[" | head -1 | cut -d: -f1)
             
             if [ -n "$NEXT_SECTION" ]; then
               INSERT_LINE=$((LINE_NUM + NEXT_SECTION))
+              head -n $((INSERT_LINE - 1)) CHANGELOG.md > /tmp/changelog_new.md
+              cat /tmp/changelog_entry.md >> /tmp/changelog_new.md
+              tail -n +${INSERT_LINE} CHANGELOG.md >> /tmp/changelog_new.md
             else
-              # Append at end
-              cat /tmp/new_entry.md >> CHANGELOG.md
-              exit 0
+              cp CHANGELOG.md /tmp/changelog_new.md
+              cat /tmp/changelog_entry.md >> /tmp/changelog_new.md
             fi
-            
-            # Insert new entry
-            head -n $((INSERT_LINE - 1)) CHANGELOG.md > /tmp/changelog_new.md
-            cat /tmp/new_entry.md >> /tmp/changelog_new.md
-            tail -n +${INSERT_LINE} CHANGELOG.md >> /tmp/changelog_new.md
-            mv /tmp/changelog_new.md CHANGELOG.md
           else
-            # Just append to the top after the header
             head -n 7 CHANGELOG.md > /tmp/changelog_new.md
-            cat /tmp/new_entry.md >> /tmp/changelog_new.md
+            cat /tmp/changelog_entry.md >> /tmp/changelog_new.md
             tail -n +8 CHANGELOG.md >> /tmp/changelog_new.md
-            mv /tmp/changelog_new.md CHANGELOG.md
           fi
           
+          mv /tmp/changelog_new.md CHANGELOG.md
           echo "Updated CHANGELOG.md with version ${NEW_VERSION}"
 
-      - name: Commit version bump
+      - name: Commit changes
         run: |
           git add VERSION Cargo.toml Cargo.lock CHANGELOG.md
-          git commit -m "chore: bump ${{ inputs.bump_type }} version to ${{ steps.bump_version.outputs.new_version }}" || echo "No changes to commit"
+          git commit -m "chore(release): manual bump ${{ steps.bump_version.outputs.bump_type }} version to ${{ steps.bump_version.outputs.new_version }} [skip ci]
+
+          This was a manual version bump initiated via GitHub Actions workflow.
+          
+          Bump type: ${{ steps.bump_version.outputs.bump_type }}
+          Previous version: ${{ steps.current_version.outputs.version }}
+          New version: ${{ steps.bump_version.outputs.new_version }}"
 
       - name: Create and push tag
-        if: ${{ !inputs.skip_tag }}
+        if: ${{ inputs.create_tag }}
         run: |
-          git tag -a "v${{ steps.bump_version.outputs.new_version }}" -m "Release version ${{ steps.bump_version.outputs.new_version }}"
-          git push origin main --tags
+          git tag -a "v${{ steps.bump_version.outputs.new_version }}" -m "Release v${{ steps.bump_version.outputs.new_version }}
+          
+          Manual ${{ steps.bump_version.outputs.bump_type }} version bump."
+          git push origin main
+          git push origin "v${{ steps.bump_version.outputs.new_version }}"
 
       - name: Push changes without tag
-        if: ${{ inputs.skip_tag }}
+        if: ${{ !inputs.create_tag }}
         run: |
           git push origin main
 
       - name: Summary
         run: |
-          echo "### Manual Version Bump Complete! 🎉" >> $GITHUB_STEP_SUMMARY
-          echo "" >> $GITHUB_STEP_SUMMARY
-          echo "**Bump Type:** \`${{ inputs.bump_type }}\`" >> $GITHUB_STEP_SUMMARY
-          echo "**Previous Version:** ${{ steps.current_version.outputs.version }}" >> $GITHUB_STEP_SUMMARY
-          echo "**New Version:** ${{ steps.bump_version.outputs.new_version }}" >> $GITHUB_STEP_SUMMARY
-          echo "" >> $GITHUB_STEP_SUMMARY
-          if [ "${{ inputs.skip_tag }}" = "false" ]; then
+          cat >> $GITHUB_STEP_SUMMARY << EOF
+          ## Manual Version Bump Complete! 🎉
+          
+          **Bump Type:** \`${{ steps.bump_version.outputs.bump_type }}\`
+          **Previous Version:** \`${{ steps.current_version.outputs.version }}\`
+          **New Version:** \`${{ steps.bump_version.outputs.new_version }}\`
+          
+          ### Changes
+          - ✅ Updated VERSION file
+          - ✅ Updated Cargo.toml
+          - ✅ Updated Cargo.lock
+          - ✅ Updated CHANGELOG.md with categorized commits
+          
+          EOF
+          
+          if [ "${{ inputs.create_tag }}" = "true" ]; then
+            echo "### Tag Created" >> $GITHUB_STEP_SUMMARY
             echo "Tag \`v${{ steps.bump_version.outputs.new_version }}\` has been created and pushed." >> $GITHUB_STEP_SUMMARY
+            echo "" >> $GITHUB_STEP_SUMMARY
+            echo "The release workflow will automatically trigger to build and publish binaries." >> $GITHUB_STEP_SUMMARY
           else
-            echo "_Tag creation was skipped._" >> $GITHUB_STEP_SUMMARY
+            echo "### Tag Skipped" >> $GITHUB_STEP_SUMMARY
+            echo "_Tag creation was skipped. You can manually trigger a release later._" >> $GITHUB_STEP_SUMMARY
           fi
