--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -5,6 +5,7 @@ on:
     branches:
       - main
       - develop
+      - feat/*
   pull_request:
     branches:
       - main
@@ -15,6 +16,36 @@ env:
   RUST_BACKTRACE: 1
 
 jobs:
+  # Fast checks that run in parallel
+  checks:
+    name: Code Quality Checks
+    runs-on: ubuntu-latest
+    steps:
+      - name: Checkout code
+        uses: actions/checkout@v4
+
+      - name: Install Rust toolchain
+        uses: dtolnay/rust-toolchain@stable
+        with:
+          components: rustfmt, clippy
+
+      - name: Setup Rust cache
+        uses: Swatinem/rust-cache@v2
+        with:
+          cache-on-failure: true
+
+      - name: Check formatting
+        run: cargo fmt --all -- --check
+
+      - name: Run clippy
+        run: cargo clippy --all-targets --all-features -- -D warnings
+
+      - name: Check documentation
+        run: cargo doc --no-deps --document-private-items
+        env:
+          RUSTDOCFLAGS: -D warnings
+
+  # Cross-platform testing matrix
   test:
     name: Test - ${{ matrix.os }}
     runs-on: ${{ matrix.os }}
@@ -22,133 +53,110 @@ jobs:
       fail-fast: false
       matrix:
         os: [ubuntu-latest, macos-latest, windows-latest]
-        rust: [stable]
+        include:
+          - os: ubuntu-latest
+            run-integration: true
+          - os: macos-latest
+            run-integration: true
+          - os: windows-latest
+            run-integration: false
 
     steps:
       - name: Checkout code
         uses: actions/checkout@v4
 
-      - name: Install Rust
+      - name: Install Rust toolchain
         uses: dtolnay/rust-toolchain@stable
+
+      - name: Setup Rust cache
+        uses: Swatinem/rust-cache@v2
         with:
-          toolchain: ${{ matrix.rust }}
-          components: rustfmt, clippy
-
-      - name: Cache cargo registry
-        uses: actions/cache@v4
-        with:
-          path: ~/.cargo/registry
-          key: ${{ runner.os }}-cargo-registry-${{ hashFiles('**/Cargo.lock') }}
-          restore-keys: |
-            ${{ runner.os }}-cargo-registry-
-
-      - name: Cache cargo index
-        uses: actions/cache@v4
-        with:
-          path: ~/.cargo/git
-          key: ${{ runner.os }}-cargo-git-${{ hashFiles('**/Cargo.lock') }}
-          restore-keys: |
-            ${{ runner.os }}-cargo-git-
-
-      - name: Cache target directory
-        uses: actions/cache@v4
-        with:
-          path: target
-          key: ${{ runner.os }}-target-${{ hashFiles('**/Cargo.lock') }}
-          restore-keys: |
-            ${{ runner.os }}-target-
-
-      - name: Check formatting
-        if: matrix.os == 'ubuntu-latest'
-        run: cargo fmt --all -- --check
-
-      - name: Run clippy
-        run: cargo clippy --all-targets --all-features -- -D warnings
+          key: ${{ matrix.os }}
+          cache-on-failure: true
 
       - name: Build
         run: cargo build --verbose
 
-      - name: Run tests
+      - name: Run unit tests
         run: cargo test --verbose
 
-      - name: Build release
+      - name: Build release binary
         run: cargo build --release --verbose
 
-  integration-test:
-    name: Integration Tests - ${{ matrix.os }}
-    runs-on: ${{ matrix.os }}
-    needs: test
-    strategy:
-      fail-fast: false
-      matrix:
-        os: [ubuntu-latest, macos-latest]
-
-    steps:
-      - name: Checkout code
-        uses: actions/checkout@v4
-
-      - name: Install Rust
-        uses: dtolnay/rust-toolchain@stable
-
-      - name: Build binary
-        run: cargo build --release
-
-      - name: Run shell integration tests
+      - name: Run integration tests
+        if: matrix.run-integration
         shell: bash
         run: |
           export PATH="$PWD/target/release:$PATH"
           
-          # Basic command tests
+          # Smoke tests
           jcvm --version
           jcvm --help
           
-          echo "✅ Basic commands work"
+          # Run integration test scripts if they exist
+          for script in scripts/test-*.sh; do
+            if [ -f "$script" ]; then
+              chmod +x "$script"
+              "$script" || echo "⚠️ Integration test $script failed (non-blocking)"
+            fi
+          done
 
-      - name: Run Python integration tests
-        if: matrix.os != 'windows-latest'
-        shell: bash
-        run: |
-          export PATH="$PWD/target/release:$PATH"
-          
-          if [ -f scripts/test-python-integration.sh ]; then
-            chmod +x scripts/test-python-integration.sh
-            ./scripts/test-python-integration.sh || true
-          fi
-
-  security-audit:
+  # Security audit - runs in parallel, allowed to fail
+  security:
     name: Security Audit
     runs-on: ubuntu-latest
+    continue-on-error: true
     steps:
       - name: Checkout code
         uses: actions/checkout@v4
 
-      - name: Install Rust
-        uses: dtolnay/rust-toolchain@stable
+      - name: Run cargo audit
+        uses: rustsec/audit-check@v1
+        with:
+          token: ${{ secrets.GITHUB_TOKEN }}
 
-      - name: Install cargo-audit
-        run: cargo install cargo-audit
-
-      - name: Run security audit
-        run: cargo audit
-
+  # Code coverage - only on main/develop, allowed to fail
   coverage:
     name: Code Coverage
     runs-on: ubuntu-latest
+    if: github.event_name == 'push' && (github.ref == 'refs/heads/main' || github.ref == 'refs/heads/develop')
+    continue-on-error: true
     steps:
       - name: Checkout code
         uses: actions/checkout@v4
 
-      - name: Install Rust
+      - name: Install Rust toolchain
         uses: dtolnay/rust-toolchain@stable
 
-      - name: Install tarpaulin
-        run: cargo install cargo-tarpaulin
+      - name: Setup Rust cache
+        uses: Swatinem/rust-cache@v2
+
+      - name: Install cargo-tarpaulin
+        uses: taiki-e/install-action@v2
+        with:
+          tool: cargo-tarpaulin
 
       - name: Generate coverage
-        run: cargo tarpaulin --verbose --all-features --workspace --timeout 120 --out Xml
+        run: cargo tarpaulin --verbose --all-features --workspace --timeout 120 --out xml
 
-      - name: Upload coverage to Codecov
-        uses: codecov/codecov-action@v3
+      - name: Upload to Codecov
+        uses: codecov/codecov-action@v4
         with:
           files: ./cobertura.xml
           fail_ci_if_error: false
+          token: ${{ secrets.CODECOV_TOKEN }}
+
+  # Final check - all required jobs must pass
+  ci-success:
+    name: CI Success
+    runs-on: ubuntu-latest
+    needs: [checks, test]
+    if: always()
+    steps:
+      - name: Check if all required jobs passed
+        run: |
+          if [[ "${{ needs.checks.result }}" != "success" ]] || [[ "${{ needs.test.result }}" != "success" ]]; then
+            echo "❌ Required CI checks failed"
+            exit 1
+          fi
+          echo "✅ All required CI checks passed"
