fix: simplify Cargo.toml update process in version bump workflow

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -68,7 +68,7 @@ jobs:
           fi
           
           # Append installation guide
-          cat >> /tmp/release_notes.md << 'EOF'
+          cat >> /tmp/release_notes.md << EOF
           
           ---
           
