--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -147,6 +147,7 @@ jobs:
       fail-fast: false
       matrix:
         platform:
+          # macOS builds
           - name: macOS (Apple Silicon)
             os: macos-latest
             target: aarch64-apple-darwin
@@ -155,6 +156,7 @@ jobs:
             os: macos-latest
             target: x86_64-apple-darwin
             cross: false
+          # Linux builds
           - name: Linux (x86_64)
             os: ubuntu-latest
             target: x86_64-unknown-linux-gnu
@@ -163,6 +165,11 @@ jobs:
             os: ubuntu-latest
             target: aarch64-unknown-linux-gnu
             cross: true
+          - name: Linux (ARMv7)
+            os: ubuntu-latest
+            target: armv7-unknown-linux-gnueabihf
+            cross: true
+          # Windows builds
           - name: Windows (x86_64)
             os: windows-latest
             target: x86_64-pc-windows-msvc
